# open-ai

./: .gitignore  README.md  app.py  faiss_store.py  index.ipynb  main.py  prompts.py  pyproject.toml  tool.py
chatbot/: index.ipynb  main.py  tools.py
faiss_index/: index.faiss  index.pkl
file_search_tool/: app.py  openai_client.py  utils.py
file_search_tool/static/: main.js  styles.css
rag/: index.ipynb  medical_o1_sft.json
static/: index.html  main.js  styles.css
