[project]
name = "open-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "fastapi>=0.118.0",
    "openai>=2.0.1",
    "pandas>=2.3.3",
    "pinecone>=7.3.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
